fix: size alignment & minor fixes

--- a/essentials-flyer/src/style.css
+++ b/essentials-flyer/src/style.css
@@ -36,7 +36,7 @@ h2 {
 
 .flyer-container {
 	width: 210mm;
-	height: auto;
+	height: 297mm;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 	background-color: var(--orange);
 	display: flex;
@@ -51,7 +51,7 @@ h2 {
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
-	min-height: 12rem;
+	min-height: 10rem;
 	margin-top: 10px;
 }
 
@@ -71,7 +71,7 @@ header {
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
-	min-height: 15rem;
+	min-height: 12rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -181,7 +181,7 @@ footer {
 	background-repeat: no-repeat;
 	background-size: cover;
 	width: 100%;
-	min-height: 15rem;
+	min-height: 13rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
@@ -266,7 +266,7 @@ footer::before {
 	max-width: calc(33.333% - 10px);
 	/* Adjust for 3 products in a row with gaps */
 	width: 100%;
-	height: 250px;
+	height: 180px;
 	/* Container height */
 	display: flex;
 	/* box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3); */
